<resources>
    <string name="app_name">Warehouse</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="store">Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="person">Person</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_last_name">Введите фамилию</string>
    <string name="department">Отдел</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
</resources>